Add a practice match.

--- a/src/main/resources/www/admin/index.html
+++ b/src/main/resources/www/admin/index.html
@@ -17,14 +17,30 @@
     <div class="main_container">
       <div class="menu">
 <!--#menu_bar_item-->
-        <button id="btn_config"></button>
-        <button id="btn_seasons"></button>
-        <button id="btn_events"></button>
-        <button id="btn_teams"></button>
-        <button id="btn_scores"></button>
-        <button id="btn_rubrics"></button>
-        <button id="btn_users"></button>
-        <button id="btn_about" class="right"></button>
+        <button id="btn_config">
+          <!--#str_menu_config-->
+        </button>
+        <button id="btn_seasons">
+          <!--#str_menu_seasons-->
+        </button>
+        <button id="btn_events">
+          <!--#str_menu_events-->
+        </button>
+        <button id="btn_teams">
+          <!--#str_menu_teams-->
+        </button>
+        <button id="btn_scores">
+          <!--#str_menu_scores-->
+        </button>
+        <button id="btn_rubrics">
+          <!--#str_menu_rubrics-->
+        </button>
+        <button id="btn_users">
+          <!--#str_menu_users-->
+        </button>
+        <button id="btn_about" class="right">
+          <!--#str_menu_about-->
+        </button>
       </div>
       <div id="tab_config" class="tab"></div>
       <div id="tab_seasons" class="tab"></div>
