--- a/src/main/resources/www/admin/scores/index.html
+++ b/src/main/resources/www/admin/scores/index.html
@@ -14,17 +14,20 @@
     <span class="name">
       <!--#str_scores_name-->
     </span>
+    <span class="match0">
+      <!--#str_match_p-->
+    </span>
     <span class="match1">
-      <!--#str_scores_match1-->
+      <!--#str_match_1-->
     </span>
     <span class="match2">
-      <!--#str_scores_match2-->
+      <!--#str_match_2-->
     </span>
     <span class="match3">
-      <!--#str_scores_match3-->
+      <!--#str_match_3-->
     </span>
     <span class="match4">
-      <!--#str_scores_match4-->
+      <!--#str_match_4-->
     </span>
   </div>
   <div class="body"></div>
