--- a/src/main/resources/www/referee/index.html
+++ b/src/main/resources/www/referee/index.html
@@ -40,6 +40,7 @@
     <div id="score" class="hidden">
       <div class="score_container">
         <div class="header">
+          <span class="match0"></span>
           <span class="match1"></span>
           <span class="match2"></span>
           <span class="match3"></span>
