--- a/src/main/resources/www/scoreboard/index.html
+++ b/src/main/resources/www/scoreboard/index.html
@@ -13,7 +13,7 @@
     <title><!--#str_scoreboard_title--></title>
   </head>
   <body>
-    <div class="scores container4">
+    <div class="scores">
       <div class="logo1">
         <img src="/fll.png">
       </div>
@@ -23,14 +23,33 @@
              onerror="this.onerror = null;
                       this.src = '/logos/<!--#year_selected-->.png';">
       </div>
-      <div class="plt center"></div>
-      <div class="numt center"></div>
-      <div class="namet left"></div>
-      <div class="hight center"></div>
-      <div class="m1t center"></div>
-      <div class="m2t center"></div>
-      <div class="m3t center"></div>
-      <div class="m4t center"></div>
+      <div class="plt center">
+        <!--#str_scoreboard_place-->
+      </div>
+      <div class="numt center">
+        <!--#str_scoreboard_number-->
+      </div>
+      <div class="namet left">
+        <!--#str_scoreboard_name-->
+      </div>
+      <div class="hight center">
+        <!--#str_scoreboard_high-->
+      </div>
+      <div class="m1t center">
+        <!--#str_match_1-->
+      </div>
+      <div class="m2t center">
+        <!--#str_match_2-->
+      </div>
+      <div class="m3t center">
+        <!--#str_match_3-->
+      </div>
+      <div class="m4t center">
+        <!--#str_match_4-->
+      </div>
+      <div class="m0t center">
+        <!--#str_match_p-->
+      </div>
       <div class="pl0 center"></div>
       <div class="num0 center"></div>
       <div class="name0 left"></div>
@@ -39,6 +58,7 @@
       <div class="m20 center"></div>
       <div class="m30 center"></div>
       <div class="m40 center"></div>
+      <div class="m00 center"></div>
       <div class="pl1 center"></div>
       <div class="num1 center"></div>
       <div class="name1 left"></div>
@@ -47,6 +67,7 @@
       <div class="m21 center"></div>
       <div class="m31 center"></div>
       <div class="m41 center"></div>
+      <div class="m01 center"></div>
       <div class="pl2 center"></div>
       <div class="num2 center"></div>
       <div class="name2 left"></div>
@@ -55,6 +76,7 @@
       <div class="m22 center"></div>
       <div class="m32 center"></div>
       <div class="m42 center"></div>
+      <div class="m02 center"></div>
       <div class="pl3 center"></div>
       <div class="num3 center"></div>
       <div class="name3 left"></div>
@@ -63,6 +85,7 @@
       <div class="m23 center"></div>
       <div class="m33 center"></div>
       <div class="m43 center"></div>
+      <div class="m03 center"></div>
       <div class="pl4 center"></div>
       <div class="num4 center"></div>
       <div class="name4 left"></div>
@@ -71,6 +94,7 @@
       <div class="m24 center"></div>
       <div class="m34 center"></div>
       <div class="m44 center"></div>
+      <div class="m04 center"></div>
       <div class="pl5 center"></div>
       <div class="num5 center"></div>
       <div class="name5 left"></div>
@@ -79,6 +103,7 @@
       <div class="m25 center"></div>
       <div class="m35 center"></div>
       <div class="m45 center"></div>
+      <div class="m05 center"></div>
       <div class="pl6 center"></div>
       <div class="num6 center"></div>
       <div class="name6 left"></div>
@@ -87,6 +112,7 @@
       <div class="m26 center"></div>
       <div class="m36 center"></div>
       <div class="m46 center"></div>
+      <div class="m06 center"></div>
       <div class="pl7 center"></div>
       <div class="num7 center"></div>
       <div class="name7 left"></div>
@@ -95,6 +121,7 @@
       <div class="m27 center"></div>
       <div class="m37 center"></div>
       <div class="m47 center"></div>
+      <div class="m07 center"></div>
     </div>
     <div class="timer_bg">
       <div class="bg"></div>
