Add a CSV import of teams

--- a/src/main/resources/www/admin/teams/index.html
+++ b/src/main/resources/www/admin/teams/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="actions">
       <span id="teams-add" class="fa fa-fw fa-plus" tabindex="0"></span>
-      <span id="teams-import" class="fa fa-fw fa-download" tabindex="0"></span>
+      <span id="teams-import" class="fa fa-fw fa-upload" tabindex="0"></span>
     </div>
   </div>
 </div>
