Clean up the QR screen.

--- a/src/main/resources/www/index.html
+++ b/src/main/resources/www/index.html
@@ -17,44 +17,65 @@
 <!--#links_wifi-->
       <a href="/admin" target="_blank">
         <div id="links_admin" class="links_tile">
-          <img src="/links/admin.png">
-          <p><!--#str_links_admin--></p>
+          <span class="title"><!--#str_links_admin--></span>
+          <div class="qr">
+            <img src="/links/admin.png">
+          </div>
+          <span class="link"><!--#base_url-->/admin</span>
         </div>
       </a>
       <a href="/judge" target="_blank">
         <div id="links_judge" class="links_tile">
-          <img src="/links/judge.png">
-          <p><!--#str_links_judge--></p>
+          <span class="title"><!--#str_links_judge--></span>
+          <div class="qr">
+            <img src="/links/judge.png">
+          </div>
+          <span class="link"><!--#base_url-->/judge</span>
         </div>
       </a>
       <a href="/referee" target="_blank">
         <div id="links_referee" class="links_tile">
-          <img src="/links/referee.png">
-          <p><!--#str_links_referee--></p>
+          <span class="title"><!--#str_links_referee--></span>
+          <div class="qr">
+            <img src="/links/referee.png">
+          </div>
+          <span class="link"><!--#base_url-->/referee</span>
         </div>
       </a>
       <a href="/scoreboard" target="_blank">
         <div id="links_scoreboard" class="links_tile">
-          <img src="/links/scoreboard.png">
-          <p><!--#str_links_scoreboard--></p>
+          <span class="title"><!--#str_links_scoreboard--></span>
+          <div class="qr">
+            <img src="/links/scoreboard.png">
+          </div>
+          <span class="link"><!--#base_url-->/scoreboard</span>
         </div>
       </a>
       <a href="/standings" target="_blank">
         <div id="links_standings" class="links_tile">
-          <img src="/links/standings.png">
-          <p><!--#str_links_standings--></p>
+          <span class="title"><!--#str_links_standings--></span>
+          <div class="qr">
+            <img src="/links/standings.png">
+          </div>
+          <span class="link"><!--#base_url-->/standings</span>
         </div>
       </a>
       <a href="/timekeeper" target="_blank">
         <div id="links_timekeeper" class="links_tile">
-          <img src="/links/timekeeper.png">
-          <p><!--#str_links_timekeeper--></p>
+          <span class="title"><!--#str_links_timekeeper--></span>
+          <div class="qr">
+            <img src="/links/timekeeper.png">
+          </div>
+          <span class="link"><!--#base_url-->/timekeeper</span>
         </div>
       </a>
       <a href="/timer" target="_blank">
         <div id="links_timer" class="links_tile">
-          <img src="/links/timer.png">
-          <p><!--#str_links_timer--></p>
+          <span class="title"><!--#str_links_timer--></span>
+          <div class="qr">
+            <img src="/links/timer.png">
+          </div>
+          <span class="link"><!--#base_url-->/timer</span>
         </div>
       </a>
       <br clear="all">
