Allow pause on the standings display.

--- a/src/main/resources/www/standings/index.html
+++ b/src/main/resources/www/standings/index.html
@@ -78,5 +78,8 @@
       <div class="e17 center"></div>
       <div class="e27 center"></div>
     </div>
+    <div class="paused">
+      <i class="fa fa-pause"></i>
+    </div>
   </body>
 </html>
