Display league standings by division.

--- a/src/main/resources/www/standings/index.html
+++ b/src/main/resources/www/standings/index.html
@@ -23,12 +23,24 @@
              onerror="this.onerror = null;
                       this.src = '/logos/<!--#year_selected-->.png';">
       </div>
-      <div class="plt center"></div>
-      <div class="numt center"></div>
-      <div class="namet left"></div>
-      <div class="scrt center"></div>
-      <div class="e1t center"></div>
-      <div class="e2t center"></div>
+      <div class="plt center">
+        <!--#str_standings_place-->
+      </div>
+      <div class="numt center">
+        <!--#str_standings_number-->
+      </div>
+      <div class="namet left">
+        <!--#str_standings_name-->
+      </div>
+      <div class="scrt center">
+        <!--#str_standings_score-->
+      </div>
+      <div class="e1t center">
+        <!--#str_standings_event1-->
+      </div>
+      <div class="e2t center">
+        <!--#str_standings_event2-->
+      </div>
       <div class="pl0 center"></div>
       <div class="num0 center"></div>
       <div class="name0 left"></div>
